// ntfy signaling relay messages for WebRTC connection establishment and pairing
// Used when direct HTTP connection fails due to NAT
// Shared between: Python daemon, Android app, iOS app

syntax = "proto3";

package ras;

option java_package = "com.ras.proto";
option java_multiple_files = true;
option swift_prefix = "RAS";

import "pairing.proto";

// Message sent via ntfy for signaling relay
// Encrypted with signaling_key (AES-256-GCM) before sending
// Wire format: base64(IV + ciphertext + tag)
message NtfySignalMessage {
  // Message type
  MessageType type = 1;

  enum MessageType {
    OFFER = 0;        // Phone -> Daemon: WebRTC offer
    ANSWER = 1;       // Daemon -> Phone: WebRTC answer
    CAPABILITIES = 2; // Bidirectional: Exchange connection capabilities
    DISCOVER = 3;     // Phone -> Daemon: Request current IPs
    DISCOVER_RESPONSE = 4;  // Daemon -> Phone: Current IPs
    PAIR_REQUEST = 5;       // Phone -> Daemon: Pairing credential exchange
    PAIR_RESPONSE = 6;      // Daemon -> Phone: Pairing credential response
  }

  // Session ID from QR code (must match pending session)
  // Empty string for reconnection mode
  string session_id = 2;

  // SDP content in raw format (NOT JSON-wrapped).
  // WebRTC offer or answer with full ICE candidates included.
  // Must start with "v=" (SDP version line).
  // Example: "v=0\r\no=- 12345 1 IN IP4 127.0.0.1\r\ns=-\r\n..."
  string sdp = 3;

  // Device info (required in OFFER, optional in ANSWER)
  string device_id = 4;
  string device_name = 5;

  // Replay protection
  int64 timestamp = 6;   // Unix timestamp (seconds)
  bytes nonce = 7;       // 16 random bytes (CSPRNG)

  // Connection capabilities (used with CAPABILITIES type)
  ConnectionCapabilities capabilities = 8;

  // Discovery response (used with DISCOVER_RESPONSE type)
  DiscoveryResponse discovery = 9;

  // Pairing credential exchange (used with PAIR_REQUEST/PAIR_RESPONSE types)
  PairRequest pair_request = 10;
  PairResponse pair_response = 11;
}

// Connection capabilities for strategy negotiation.
// Exchanged before attempting connection to determine best method.
message ConnectionCapabilities {
  // Tailscale VPN info (if available)
  string tailscale_ip = 1;     // e.g., "100.107.50.54"
  int32 tailscale_port = 2;    // e.g., 9876

  // Supported connection methods
  bool supports_webrtc = 3;    // Standard P2P (always true)
  bool supports_turn = 4;      // TURN relay (if configured)

  // Protocol version for compatibility
  int32 protocol_version = 5;  // Current: 1
}

// Discovery response with all available IPs
// Sent in response to DISCOVER message
message DiscoveryResponse {
  // LAN IP (physical network interface)
  string lan_ip = 1;
  int32 lan_port = 2;

  // VPN IP (non-Tailscale VPN like WireGuard, OpenVPN)
  string vpn_ip = 3;
  int32 vpn_port = 4;

  // Tailscale IP (if on Tailscale network)
  string tailscale_ip = 5;
  int32 tailscale_port = 6;

  // Public IP (via STUN, may not be directly reachable)
  string public_ip = 7;
  int32 public_port = 8;

  // Device info
  string device_id = 9;

  // Timestamp for freshness check
  int64 timestamp = 10;
}
